--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="menu_home">Головна</string>
     <string name="menu_clubs">Гуртки</string>
+    <string name="menu_club">Гурток</string>
     <string name="menu_challange">Челендж</string>
     <string name="challengeTitle">Челендж \"Навчай українською\"</string>
     <string name="challengeDescription">Ми допоможемо вам перейти на українську мову викладання. Тут ви можете знайти мотиваційні та практичні вебінари з експертами, корисні матеріали, які вдосконалять ваші знання та навички викладати українською.</string>
@@ -30,4 +31,6 @@
         <item>Черкаси</item>
         <item>Без локації</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
