--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_task">Завдання</string>
     <string name="todo">TODO</string>
+    <string name="login">Увійти</string>
 </resources>
