fixed all problems, fixed club logo code, restored git project, added login fragment, ONLY FOR TEST

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="menu_task">Завдання</string>
     <string name="todo">TODO</string>
     <string name="login">Увійти</string>
+    <string name="category">категорії</string>
 </resources>
